--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
 nav{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    width: 95%;
 }
 
 nav .logo{
     padding: 20px;
-    margin: 30px;
-    
+    margin: 100px;
 }
 
 nav .nav_links{
-    margin: 40px;
+    margin: 70px;
 }
 
 nav .nav_links ul{
@@ -30,29 +29,34 @@ nav .nav_links ul li a{
     font-weight: 500;
 }
 
-main{
-    display: flex;
+nav .nav_links ul li a:hover{
+    color: rgb(233, 60, 60);
 }
 
-main .hero .hero-image{
-    margin: 0 0 0 50px;	
+main{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 5px;
 }
+
+main .hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 main .hero .hero-image img{
-    width: 500px;
+    width: 600px;
     height: 200px;
-    padding: 0;
 }
 
 main .hero .hero-text{
     display: flex;
     flex-direction: row;
-    padding: 50px;
-}
-main .hero .hero-text .header{
-    padding: 20px;
+    width: 600px;
 }
 
-main .hero .hero-text .header #header1{
+main .hero .hero-text #header h1{
     font-family: "Inter", sans-serif;
     font-size: 40px;
     font-weight: 700;
@@ -63,7 +67,7 @@ main .hero .hero-text .header #header1{
 main .hero .hero-text .paragraph{
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 30px;
 }
 
 main .hero .hero-text .paragraph p{
@@ -78,29 +82,167 @@ main .hero .hero-text .read-more{
     height: 50px;
     background-color: rgb(233, 60, 60);
     font-family: "Inter", sans-serif;
-    font-weight: 400;
+    font-weight: 700;
 }
 
-main .aside {
+main .hero .hero-text .read-more:hover{
+    background-color: rgb(5, 5, 26);
+    color: white;
+}
+
+main .aside{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 350px;
-    background-color: rgb(43, 34, 34);
-    color: white;
-    font-family: "Inter", sans-serif;
+    gap: 5px;
+    background-color: rgb(5, 5, 26);
 }
 
-main .aside h1{
-    font-size: 40px;
-    font-weight: 700;
-    color: orange;
-    padding: 20px;
+main .aside .header{
+    padding: 10px;
 }
+main .aside .header h1{
+    font-family: "Inter", sans-serif;
+    font-size: 30px;
+    color: rgb(209, 137, 2);
+}
+
+main .aside .text{
+    padding: 10px;
+}
+
+main .aside .text h2{
+    font-family: "Inter", sans-serif;
+    font-size: 18px;
+    color: white;
+}
+
+main .aside .text h2:hover{
+    color: rgb(209, 137, 2);
+}
+
+main .aside .text p{ 
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    color: grey;
+}
+
+main .aside .text #line1{
+    border: 1px solid grey; 
+}
+
+main .aside .text #line2{
+    color:grey; 
+}
+
+footer{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-left: 150px;
+    margin-top: 40px;
+}
+
+footer .item1{
+    display: flex;
+    gap: 10px;
+}
+
+footer .item1 #image1 img{
+    width: 80px;
+    height: 120px;
+}
+
+footer .item1 .text h1{
+    font-family: "Inter", sans-serif;
+    font-size: 22px;
+    color: rgb(233, 60, 60);
+}
+
+footer .item1 .text h2{
+    font-family: "Inter", sans-serif;
+    font-size: 15px;
+    color: black;
+}
+
+footer .item1 .text h2:hover{
+    color: rgb(233, 60, 60);
+}
+
+footer .item1 .text p{
+    font-family: "Inter", sans-serif;
+    font-size: 13px;
+    color: grey;
+}
+
+footer .item2{
+    display: flex;
+    gap: 10px;
+}
+
+footer .item2 #image2 img{
+    width: 80px;
+    height: 120px;
+}
+
+footer .item2 .text h1{
+    font-family: "Inter", sans-serif;
+    font-size: 22px;
+    color: rgb(233, 60, 60);
+}
+
+footer .item2 .text h2{
+    font-family: "Inter", sans-serif;
+    font-size: 15px;
+    color: black;
+}
+
+footer .item2 .text h2:hover{
+    color: rgb(233, 60, 60);
+}
+
+footer .item2 .text p{
+    font-family: "Inter", sans-serif;
+    font-size: 13px;
+    color: grey;
+}
+
+footer .item3{
+    display: flex;
+    gap: 10px;
+}
+
+footer .item3 #image3 img{
+    width: 80px;
+    height: 120px;
+}
+
+footer .item3 .text h1{
+    font-family: "Inter", sans-serif;
+    font-size: 22px;
+    color: rgb(233, 60, 60);
+}
+
+footer .item3 .text h2{
+    font-family: "Inter", sans-serif;
+    font-size: 15px;
+    color: black;
+}
+
+footer .item3 .text h2:hover{
+    color: rgb(233, 60, 60);
+}
+
+footer .item3 .text p{
+    font-family: "Inter", sans-serif;
+    font-size: 13px;
+    color: grey;
+}
+
 /* Feel free to remove these styles or customise in your own stylesheet 👍 */
 
 .attribution { 
+    padding: 20px;
+    font-family: "Inter", sans-serif;
     font-size: 11px; 
     text-align: center; 
 }
